--- a/raw_gen_train.ipynb
+++ b/raw_gen_train.ipynb
@@ -2,23 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-06-25 09:05:04.329884: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:477] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "E0000 00:00:1750842304.359502    1141 cuda_dnn.cc:8310] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "E0000 00:00:1750842304.368281    1141 cuda_blas.cc:1418] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-06-25 09:05:04.398078: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "I0000 00:00:1750842319.487382    1141 gpu_device.cc:2022] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2245 MB memory:  -> device: 0, name: NVIDIA GeForce GTX 1650 Ti, pci bus id: 0000:01:00.0, compute capability: 7.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Notebook Setup & Imports\n",
     "import os\n",
@@ -69,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,19 +137,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'raw_gen_model.raw_gen_callbacks.raw_gen_token_viz_callback'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mraw_gen_model\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw_gen_callbacks\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw_get_save_model_callback\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SaveBestRawModelCallback\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mconfig\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m IMAGE_CHANNELS, IMAGE_RESOLUTION, LOGS_DIR, TRAINING_ID\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mraw_gen_model\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw_gen_callbacks\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw_gen_token_viz_callback\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TokenVisualizationCallback\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mraw_gen_model\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw_gen_callbacks\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw_gen_attention_callback\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AttentionVisualizationCallback\n\u001b[32m      9\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mraw_gen_model\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw_gen_callbacks\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mraw_gen_token_match_callback\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m TokenMatchingCallback\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'raw_gen_model.raw_gen_callbacks.raw_gen_token_viz_callback'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import gc\n",
     "# Model Initialization & Run\n",
@@ -209,6 +183,7 @@
     "token_matching_callback.set_model(drone_to_sat)\n",
     "token_matching_callback.set_encoder(satellite_encoder)\n",
     "\n",
+    "\n",
     "image_transform_callback = ImageTransformCallback(\n",
     "    validation_data=val_dataset,\n",
     "    encoder=satellite_encoder,\n",
@@ -253,7 +228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
